--- a/app/module.yaml
+++ b/app/module.yaml
@@ -4,3 +4,10 @@ product: jvm/app
 dependencies:
   - ../api
 
+settings:
+  kotlin:
+    languageVersion: 2.3
+  jvm:
+    jdk:
+      version: 24  # major JDK version
+      distributions: [temurin]  # optional allowlist of distributions (accept all if omitted)
